--- a/CurrencyConverter/Views/TextFieldView.xib
+++ b/CurrencyConverter/Views/TextFieldView.xib
@@ -18,8 +18,8 @@
             <rect key="frame" x="0.0" y="0.0" width="455" height="48"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hrP-KY-Pjf">
-                    <rect key="frame" x="40" y="0.0" width="415" height="48"/>
+                <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="hrP-KY-Pjf">
+                    <rect key="frame" x="40" y="0.0" width="407" height="48"/>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits"/>
                 </textField>
@@ -33,7 +33,7 @@
             </subviews>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="hrP-KY-Pjf" secondAttribute="trailing" id="1dy-Vp-LdZ"/>
+                <constraint firstAttribute="trailing" secondItem="hrP-KY-Pjf" secondAttribute="trailing" constant="8" id="1dy-Vp-LdZ"/>
                 <constraint firstItem="hrP-KY-Pjf" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="7DI-Wn-yf2"/>
                 <constraint firstItem="3KA-kt-me3" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="9Sp-A3-NSu"/>
                 <constraint firstAttribute="bottom" secondItem="hrP-KY-Pjf" secondAttribute="bottom" id="bcy-ie-7bx"/>
