--- a/CurrencyConverter/Views/CurrencyTableViewCell.xib
+++ b/CurrencyConverter/Views/CurrencyTableViewCell.xib
@@ -9,24 +9,24 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="71" id="KGk-i7-Jjw" customClass="CurrencyTableViewCell" customModule="CurrencyConverter" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="343" height="71"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="133" id="KGk-i7-Jjw" customClass="CurrencyTableViewCell" customModule="CurrencyConverter" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="380" height="133"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="343" height="71"/>
+                <rect key="frame" x="0.0" y="0.0" width="380" height="133"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="6hr-ED-VV8">
-                        <rect key="frame" x="20" y="8" width="303" height="55"/>
+                        <rect key="frame" x="20" y="8" width="340" height="117"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wGx-2A-CPS">
-                                <rect key="frame" x="0.0" y="0.0" width="303" height="42"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="Kjt-00-Eic">
+                                <rect key="frame" x="0.0" y="0.0" width="340" height="104"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LDd-1f-ZuQ">
-                                        <rect key="frame" x="0.0" y="0.0" width="48" height="24"/>
+                                    <view contentMode="scaleToFill" horizontalHuggingPriority="1000" verticalHuggingPriority="750" horizontalCompressionResistancePriority="1000" translatesAutoresizingMaskIntoConstraints="NO" id="LDd-1f-ZuQ">
+                                        <rect key="frame" x="0.0" y="0.0" width="52" height="104"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RXb-Vm-Baq">
-                                                <rect key="frame" x="24" y="4" width="0.0" height="16"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="1000" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" text="XXX" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RXb-Vm-Baq">
+                                                <rect key="frame" x="9.3333333333333321" y="4" width="33.333333333333343" height="96"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
@@ -35,31 +35,25 @@
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <constraints>
                                             <constraint firstAttribute="bottom" secondItem="RXb-Vm-Baq" secondAttribute="bottom" constant="4" id="JnO-WQ-ZYe"/>
+                                            <constraint firstAttribute="width" constant="52" id="dIq-kO-23P"/>
                                             <constraint firstItem="RXb-Vm-Baq" firstAttribute="top" secondItem="LDd-1f-ZuQ" secondAttribute="top" constant="4" id="dbq-98-PGL"/>
-                                            <constraint firstAttribute="height" constant="24" id="jDV-xI-P2j"/>
-                                            <constraint firstItem="RXb-Vm-Baq" firstAttribute="centerX" secondItem="LDd-1f-ZuQ" secondAttribute="centerX" id="tUH-PC-lgf"/>
-                                            <constraint firstAttribute="width" constant="48" id="uBm-ho-7p5"/>
+                                            <constraint firstItem="RXb-Vm-Baq" firstAttribute="centerX" secondItem="LDd-1f-ZuQ" secondAttribute="centerX" id="fnP-1s-Yhx"/>
                                         </constraints>
                                     </view>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XDx-dC-Qyc">
-                                        <rect key="frame" x="60" y="0.0" width="243" height="42"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="750" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XDx-dC-Qyc">
+                                        <rect key="frame" x="64" y="0.0" width="41.333333333333343" height="104"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sTE-J0-b4B">
+                                        <rect key="frame" x="117.33333333333336" y="0.0" width="222.66666666666663" height="104"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                    </view>
                                 </subviews>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <constraints>
-                                    <constraint firstItem="LDd-1f-ZuQ" firstAttribute="leading" secondItem="wGx-2A-CPS" secondAttribute="leading" id="CS8-da-HQ3"/>
-                                    <constraint firstAttribute="trailing" secondItem="XDx-dC-Qyc" secondAttribute="trailing" id="FlZ-7Y-sga"/>
-                                    <constraint firstItem="LDd-1f-ZuQ" firstAttribute="top" secondItem="wGx-2A-CPS" secondAttribute="top" id="Tbq-Pd-bgK"/>
-                                    <constraint firstItem="XDx-dC-Qyc" firstAttribute="top" secondItem="wGx-2A-CPS" secondAttribute="top" id="fJx-jf-RzB"/>
-                                    <constraint firstAttribute="bottom" secondItem="XDx-dC-Qyc" secondAttribute="bottom" id="glz-T7-bFF"/>
-                                    <constraint firstItem="XDx-dC-Qyc" firstAttribute="leading" secondItem="LDd-1f-ZuQ" secondAttribute="trailing" constant="12" id="iEn-wg-ytP"/>
-                                </constraints>
-                            </view>
+                            </stackView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OqN-0X-gnp">
-                                <rect key="frame" x="0.0" y="54" width="303" height="1"/>
+                                <rect key="frame" x="0.0" y="116" width="340" height="1"/>
                                 <color key="backgroundColor" red="1" green="0.2527923882" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="1" id="gb5-N2-b49"/>
@@ -80,7 +74,7 @@
                 <outlet property="symbolLabel" destination="RXb-Vm-Baq" id="icO-Jy-3Ug"/>
                 <outlet property="valueLabel" destination="XDx-dC-Qyc" id="fVY-jr-lgO"/>
             </connections>
-            <point key="canvasLocation" x="80.152671755725194" y="29.225352112676056"/>
+            <point key="canvasLocation" x="51.908396946564885" y="4.5774647887323949"/>
         </tableViewCell>
     </objects>
     <resources>
